sandbox/output
StockProfit.cpp:10:39: error: use of undeclared identifier 'prices'; did you mean 'prices_'?
        maxProfitsAfterBuy.push_back(-prices[0]);
                                      ^~~~~~
                                      prices_
./StockProfit.hpp:23:17: note: 'prices_' declared here
    vector<int> prices_;
                ^
1 error generated.
make: *** [test] Error 1
